test: improve test coverage and reorganize integration tests